MediaPlayer ver 1.0.1, se agrego el modulo MediaPlayer.js

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
       <button id="playButton">Play/Pause</button>    
 
-      <script src="/assets/index.js"> </script>
+      <!-- Tratar la script como un modulo-->
+      <script type="module" src="/assets/index.js"> </script>
     </main>    
   </body>
 </html>
