--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <source src="./assets/BigBuckBunny.mp4" />
       </video>
 
-      <button id="playButton">Play/Pause</button>    
+      <button id="playButton">Play/Pause</button>
+      <button id="mutedButton">Muted/Unmuted</button>    
 
       <!-- Tratar la script como un modulo-->
       <script type="module" src="/assets/index.js"> </script>
