Se convirtio los js a ts

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <button id="mutedButton">Muted/Unmuted</button>    
 
       <!-- Tratar la script como un modulo-->
-      <script type="module" src="/assets/index.js"> </script>
+      <script type="module" src="/assets/index.ts"> </script>
     </main>    
 
     <h2>Comments</h2>
